Added the front component

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,5 +17,14 @@ html{
 
 body{
   background-color: orangered;
+  font-size: 1rem;
+  border: 5px solid red;
+}
+
+.front{
+  margin: 5rem auto;
+  max-width: 90rem;
+  min-height: 85vh;
+  background-color: aliceblue;
 }
 
