--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,71 @@ body{
   margin: 5rem auto;
   max-width: 90rem;
   min-height: 85vh;
-  background-color: aliceblue;
+}
+.header{
+  padding: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #FFF7ED;
+  font-family: 'Inter', sans-serif;
+  &__main{
+    font-size: 2rem;
+    font-weight: 900;
+  }
+  &__sub{
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    justify-content: space-around;
+    font-size: 1.6rem;
+    color: #4D4D4D;
+  }
+  
+}
+.home{
+  background-image: url('./assets/image_53.png');
+  background-size: cover;
+  width: 100%;
+  height: 40rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  gap: 2rem;
+  font-family: 'Inter', sans-serif;
+  color: white;
+  padding: 6.5rem 3.5rem;
+  &__head{
+    font-size: 3.6rem;
+    font-weight: 800;
+  }
+  &__description{
+    font-weight: 500;
+    font-size: 2rem;
+  }
+  &__btn{
+    &,
+    &:link,
+    &:visited{
+      border-radius: 5px;
+      text-decoration: none;
+      color: white;
+      font-size: 1.5rem;
+      background-color: #FF8C38;
+      padding: 1rem 14rem;
+      box-shadow: 0 .5rem .5rem rgba( black , .5);
+      transition: all .5s;
+      transform: translateY(0);
+    }
+    
+    &:hover{
+      transform: translateY(-3px);
+    }
+    &:active{
+      transform: translateY(5px);
+    }
+  }
+
 }
 
