footer component and styled

--- a/src/index.scss
+++ b/src/index.scss
@@ -92,4 +92,13 @@ body{
   }
 
 }
-
+.footer{
+  background-color: #252525;
+  color: #AAAAAA;
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
