--- a/src/index.scss
+++ b/src/index.scss
@@ -102,3 +102,64 @@ body{
   align-items: center;
   justify-content: center;
 }
+.about{
+  background-color: #FFF7ED;
+  &__pic{
+    display: block;
+    width: 100%;
+  }
+  &__desc{
+    padding: 5rem 2.5rem;
+    font-family: 'Inter', sans-serif;
+    display: flex;
+    gap: 2.5rem;
+    flex-direction: column;
+    justify-content: space-around;
+    &--heading{
+      font-weight: 700;
+      font-size: 3.6rem;
+    }
+    &--content{
+      font-weight: 500;
+      font-size: 1.6rem;
+    }
+    &--card{
+      background-color: #FFCC8D;
+      padding: 3.2rem 3.8rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2.5rem;
+      justify-content: space-around;
+    }
+    &--head{
+      & > h2{
+        font-size: 2.4rem;
+        font-weight: 700;
+      }
+    }
+    &--btn{
+      &,
+      &:link,
+      &:visited{
+        width:21.5%;
+        font-size: 1.5rem;
+        color: white;
+        font-weight: 700;
+        text-decoration: none;
+        background-color: #252525;
+        padding: 1.2rem 2.2rem;
+        border-radius: 5px;
+        box-shadow: 0 .5rem .5rem rgba( black, .5);
+        transition: all .5s;
+        transform: translate(0);
+      }
+      &:hover{
+        transform: translateY(-3px);
+      }
+      &:active{
+        transform: translateY(5px);
+      }
+      
+    }
+  }
+}
