--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,16 @@ body{
   max-width: 90rem;
   min-height: 85vh;
 }
+.Link{
+  &,
+  &:link,
+  &:visited{
+    text-decoration: none;
+  }
+  &:hover{
+    text-decoration: underline;
+  }
+}
 .header{
   padding: 3rem;
   display: flex;
@@ -36,6 +46,9 @@ body{
   &__main{
     font-size: 2rem;
     font-weight: 900;
+    &>a{
+      color:black;
+    }
   }
   &__sub{
     display: flex;
@@ -43,7 +56,9 @@ body{
     gap: 1em;
     justify-content: space-around;
     font-size: 1.6rem;
-    color: #4D4D4D;
+    &>a{
+      color: #4D4D4D;
+    }
   }
   
 }
