--- a/src/index.scss
+++ b/src/index.scss
@@ -178,3 +178,77 @@ body{
     }
   }
 }
+.vans{
+  background-color: #FFF7ED;
+  padding: 3.4rem 2.5rem;
+  &__head{
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 2rem;
+  }
+  &__filter{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 5rem;
+    &--btn{
+      background-color: #FFEAD0;
+      border: none;
+      padding: 1rem 2rem;
+      border-radius: 5px;
+      box-shadow: 0 2px 2px rgba( black, .5);
+      &:hover{
+        background-color: #d4cdc4;
+      }
+    }
+    &--clear{
+      &,
+      &:link,
+      &:visited{
+        font-size: 1.6rem;
+        color: black;
+        text-decoration: none;
+        border-bottom: 1px solid black;
+      }
+      
+    }
+  }
+  &__tiles{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 3rem;
+  }
+  &__tile{
+    width:23.5%;
+    &--img{
+      width:100%;
+      border-radius: 3px;
+      margin-bottom: 1rem;
+    }
+    &__info{
+      display: flex;
+      justify-content: space-between;
+      &--price{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        &>p{
+          font-size: 1.3rem;
+        }
+      }
+    }
+    &__btn{
+      text-decoration: none;
+      color: black;
+      font-size: 1.2rem;
+      padding: 5px 1rem;
+      background-color: #E17654;
+      border-radius: 5px;
+      box-shadow: 0 2px 1px rgba($color: #000000, $alpha: .5);
+    }
+  }
+  
+  
+}
