--- a/src/index.scss
+++ b/src/index.scss
@@ -306,3 +306,80 @@ body{
     font-weight: 700;
   }
 }
+.dashboard{
+  .profile{
+    padding: 3rem;
+    background-color: #FFEAD0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap:2rem;
+    font-family: Inter , 'sans-serif';
+    &__head{
+      font-size: 3rem;
+    }
+    &__details{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 1.2rem;
+      &>p>span{
+        border-bottom: 1px solid black;
+        font-weight: 700;
+      }
+    }
+    &__price{
+      font-size: 2.5rem;
+    }
+  }
+  .review{
+    background-color: #FFDDB2;
+    padding: 3rem;
+    font-family: Inter , 'sans-serif';
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &__score{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
+      &-head{
+        font-size: 1.5rem;
+        font-weight: 700;
+      }
+      &-rating{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: .5rem;
+        font-size: 1.5rem;
+        &>p>span{
+          font-weight: 700;
+        }
+      }
+    }
+    &__detail{
+      font-size: 1.5rem;
+    }
+  }
+  .vanlist{
+    background-color: #FFF7ED;
+    .head{
+      padding: 2rem 3rem;
+      font-family: Inter , 'sans-serif';
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      &__1{
+        font-size: 2rem;
+      }
+      &__2{
+        font-size: 1.6rem;
+      }
+    }
+    .container{
+      padding: 1rem 3rem;
+    }
+  }
+}
