--- a/src/index.scss
+++ b/src/index.scss
@@ -31,12 +31,9 @@ body{
   &:link{
     text-decoration: none;
   }
-  &:visited{
-    text-decoration: underline;
-  }
   &:hover{
     color: black;
-    font-weight: 900;
+    font-weight: bold;
     border-bottom: 3px solid black;
   }
   
@@ -49,9 +46,10 @@ body{
   background: #FFF7ED;
   font-family: 'Inter', sans-serif;
   &__main{
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 900;
     &>a{
+      text-decoration: none;
       color:black;
     }
   }
