--- a/src/index.scss
+++ b/src/index.scss
@@ -279,15 +279,18 @@ body{
 .van{
   &__container{
     background: #FFF7ED;
+    padding: 3rem;
   }
   &__link{
     margin: 0 1.5rem 1.5rem;
     &>a{
       font-size: 1.5rem;
+      text-decoration: none;
+      color: black;
+      border-bottom: 1px solid black;
     }
   }
   &__info{
-    padding: 1.5rem;
     gap: 2rem;
     display: flex;
     flex-direction: column;
@@ -312,6 +315,10 @@ body{
     font-family: 'Inter' , sans-serif;
     font-weight: 700;
   }
+  &__img{
+    border-radius: 5px;
+  }
+  
 }
 .dashboard{
   .profile{
@@ -418,5 +425,69 @@ body{
         font-weight: bold;
       }
     }
+  }
+}
+.hostVanDetail{
+  background-color: #FFF7ED;
+  font-family: Inter , 'sans-serif';
+  font-size: 1.5rem;
+  padding: 3rem;
+  &>a{
+    &,
+    &:link,
+    &:visited{
+      color: black;
+      text-decoration: none;
+      border-bottom: 1px solid black;
+      margin-bottom: 2rem;
+    }
+    &:hover{
+      background-color: rgba($color: black, $alpha: .1);
+    }
+  }
+  .vandetail{
+    margin-top: 2rem;
+    .display{
+      display: flex;
+      align-items: center;
+      gap: 3rem;
+      justify-content: flex-start;
+      margin-bottom: 3rem;
+      &__img{
+        width:16rem;
+        border-radius: 5px;
+      }
+      &__info{
+        &>*{
+          margin: 1rem;
+        }
+        &-price{
+          &>span{
+            font-weight: bold;
+          }
+        }
+        &-btn{
+          padding: .6rem 1.5rem;
+          border: none;
+          background-color: #E17654;
+          color: white;
+          border-radius: 3px;
+        }
+      }
+    }
+    .detail__link{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width:40%;
+      &>a{
+        &,
+        &:link,
+        &:visited{
+          color: black;
+        }
+      }
+    }
+
   }
 }
