--- a/src/index.scss
+++ b/src/index.scss
@@ -480,6 +480,7 @@ body{
       align-items: center;
       justify-content: space-between;
       width:40%;
+      margin-bottom: 2rem;
       &>a{
         &,
         &:link,
@@ -487,6 +488,25 @@ body{
           color: black;
         }
       }
+    }
+    .description{
+      h3{
+        margin-bottom: 1rem;
+      }
+      &>h3>span{
+        font-weight: lighter;
+      }
+    }
+    .price{
+      padding: 3rem 0;
+      font-size: 3rem;
+      &>span{
+        font-weight: 1;
+      }
+    }
+    .image{
+      width:16rem;
+      border-radius: 5px;
     }
 
   }
