--- a/src/index.scss
+++ b/src/index.scss
@@ -512,3 +512,28 @@ body{
 
   }
 }
+.error{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  padding: 5rem 2rem;
+  background-color: #FFF7ED;
+  &__head{
+    font-family: 'Inter' , sans-serif;
+    font-size: 3.2rem;
+    font-weight: 700;
+  }
+  &__link{
+    padding: 2rem 10rem;
+    background-color: black;
+    color: white;
+    font-size: 2rem;
+    font-weight: 500;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 0 2px 3px rgba($color: black, $alpha: .5);
+  }
+}
